# projet-ratio

./: .gitignore  README.md  pyproject.toml  requirements.txt
previous/: main_window.py  main_window_V4.py  mariscotti_old.py  spectrum_plot.py
scripts/: build_exe.ps1
src/projet_ratio/: __init__.py  app.py  main_window.py  models.py
src/projet_ratio/analysis/: __init__.py  depth.py  mariscotti.py  peak_to_valley.py  ratios.py
src/projet_ratio/io/: __init__.py  spectrum_io.py
src/projet_ratio/ui/: __init__.py  spectrum_plot.py
tests/: test_peak_to_valley.py
